fix align
Former-commit-id: 230d19e0edde3c3a86887468c63c171d2ec683a2

--- a/src/components/TablePage.css
+++ b/src/components/TablePage.css
@@ -46,9 +46,9 @@
 }
 
 .addMinerButton {
-    margin-top: 6px;
     margin-left: 6px;
     margin-right: 3px;
+    margin-top: 3px;
 }
 
 .saveMinerButton {
